[package]
name = "uniprint"
version = "0.5.0"
authors = ["thomasscharler <thscharler@gmail.com>"]
edition = "2021"
description = "Printing with windows and cups"
license = "MIT/Apache-2.0"
repository = "https://github.com/thscharler/uniprint"
readme = "README.md"
keywords = ["print", "spool", "cups"]
categories = ["os::linux-apis", "os::windows-apis"]
exclude = [".idea/*", ".gitignore"]

[lints.rust]
absolute_paths_not_starting_with_crate = "warn"
# box_pointers = "warn"
elided_lifetimes_in_paths = "warn"
explicit_outlives_requirements = "warn"
keyword_idents = "warn"
macro_use_extern_crate = "warn"
meta_variable_misuse = "warn"
missing_abi = "warn"
# NOT_ACCURATE: missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "allow"
non_ascii_idents = "warn"
noop_method_call = "warn"
# NO: or_patterns_back_compat = "warn"
pointer_structural_match = "warn"
semicolon_in_expressions_from_macros = "warn"
# NOT_ACCURATE: single_use_lifetimes = "warn"
trivial_casts = "allow"
trivial_numeric_casts = "warn"
unreachable_pub = "warn"
# unsafe_code: = "warn"
unsafe_op_in_unsafe_fn = "warn"
unstable_features = "warn"
# NO: unused_crate_dependencies = "warn"
# NO: unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
# NO: unused_results = "warn"
variant_size_differences = "warn"

[dependencies]
yore = "1.0"
#http = "1.0.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32",
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Graphics",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Printing",
    "Win32_Security",
    "Win32_System",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Registry",
] }
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
cups-sys = "0.1.4"
